@@ -22,7 +22,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import me.xdrop.fuzzywuzzy.FuzzySearch;
 import me.xdrop.fuzzywuzzy.ToStringFunction;
 import me.xdrop.fuzzywuzzy.model.BoundExtractedResult;
@@ -282,7 +281,7 @@ public final class StringUtils extends UtilityClass {
         .map(BoundExtractedResult::getReferent)
         .map(userFriendlyStringifier)
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     if (!closestMatches.isEmpty()) {
       errorBuilder.append(" Maybe you meant:");
